Notes, tax fix, overflow-x fix
Small fixes and notes for tonight.

--- a/resources/style.css
+++ b/resources/style.css
@@ -107,6 +107,7 @@ html, body {
   top: 25vh;
   max-height: 60vh;
   overflow-y: auto;
+  overflow-x: hidden;
   left: 30%;
   width: 40%;
   background: #fff;
